tests/general/diagnostic_help_compile_only.compile.expected
error[E2002]: word 'i' is compile-time only and cannot be used at runtime
  --> diagnostic_help_compile_only.sl:2:4
    |
  2 |     i
    |    ^
    | = note: compile-time-only words cannot be emitted into runtime code
    | = note: while emitting 'main'
    |
    = help: replace with a runtime word, or run the caller at compile time
    = help: remove `compile-only` if runtime use is intended

1 error(s) emitted
